# linggle-rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  aur-travis.enc
src/: linggle.rs  main.rs  storage.rs
