[package]
name = "linggle"
description = "A CLI tool of Linggle implemented in rust."
version = "0.1.0"
authors = ["H.D. Lin <oidiotlin@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "^0.9"
lazy_static = "1.3.0"
serde = "1.0.92"
dirs = "2.0.1"
unqlite = "1.4.1"
chrono = { version = "0.4.6", features = ["serde"]}
clap = "2.33.0"